src/tests/test-src/errors/R25-array-step-zero.syntran
let s = 0;
let a = [0: s: 5];
